--- a/Cables/templates/Cables/Home.html
+++ b/Cables/templates/Cables/Home.html
@@ -93,6 +93,7 @@
 
       // Redirigir a otra vista (otro archivo HTML)
       window.location.href = 'operario/';
+      //hola
     }); 
   </script>
   
