--- a/Cables/templates/Cables/Home.html
+++ b/Cables/templates/Cables/Home.html
@@ -1,37 +1,18 @@
-<!--
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>otra vez</h2>
-</body>
-</html>
--->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <title>Inicio de Sesion</title>
   <style>
     body {
-    /*
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      */
+  
     font-family: Arial, sans-serif;
-    background-image: url("static/cable/img/GL03.jpg");
-    background-size: cover;
-    background-position: center;
+    background-image: url("static/cable/img/Inicio.png");
+    background-size: cover ;
+    background-position: center center;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -39,50 +20,32 @@
     height: 100vh;    
     }
 
-    .login-container {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      width: 300px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      box-sizing: border-box;
-    }
-
-    button {
-      width: 100%;
-      padding: 10px;
-      background-color: #4caf50;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #088d40;
-    }
+   
   </style>
 </head>
 <body>
 
-  <div class="login-container">
-    <h2>Ingreso</h2>
-    <form id="loginForm" action="procesar_login.php" method="post">
-      <label for="username">Usuario:</label>
-      <input type="text" id="username" name="username" required>
-
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required>
-
-      <button type="submit">Iniciar sesión</button>
-    </form>
+<div class="container text-center">
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <form id="loginForm" action="/login" method="post">
+      <h4 class="text-light ">Ingrese Usuario</h4>
+      <input type="text" class="form-control" id="username" placeholder="Código" name="username" required>
+    </div> 
   </div>
+  <div class="row py-3 justify-content-center">
+    <div class="col-4">
+      <h4 class="text-light ">Ingrese Contraseña</h4>
+      <input type="password" class="form-control" id="password" placeholder="Contraseña" name="password" required>
+    </div> 
+  </div>
+  <div class="row py-3 justify-content-center">
+    <div class="col-4">
+      <button class="btn btn-primary w-100 py-2" type="submit">Iniciar Sesión</button>
+      <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
+    </div> 
+  </div>
+</div>
 
   <script>
     // Agregar un evento de escucha al formulario
@@ -91,7 +54,8 @@
       event.preventDefault();
 
       // Redirigir a otra vista (otro archivo HTML)
-      window.location.href = 'operario/';
+      window.location.href = 'superA/';
+      
     }); 
   </script>
 
