--- a/Cables/templates/Cables/Operario.html
+++ b/Cables/templates/Cables/Operario.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
     <title>Operario</title>
+    
+
 </head>
 <body>
-    <h2> Hola mundo</h2>
+<br>
+<br>
+<div class="container text-center">
+  <div class="row justify-content-end">
+    <div class="col">
+      <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" top="100%">
+          🚩Proyecto
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+          <li><a class="dropdown-item active" href="#">- 240103</a></li>
+          <li><a class="dropdown-item" href="#">- 250104</a></li>
+          <li><a class="dropdown-item" href="#">- 260105</a></li>
+          <li><a class="dropdown-item" href="#">- 270106</a></li>
+          <li><a class="dropdown-item" href="#">- 280107</a></li>
+          <li><a class="dropdown-item" href="#">- 290108</a></li>
+          <li><hr class="dropdown-divider"></li>
+          </ul>
+      </div>
+    </div>
+    <br>
+    <div class="col">
+      <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          🚩Tableros
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+          <li><a class="dropdown-item active" href="#">- 240103-1</a></li>
+          <li><a class="dropdown-item" href="#">- 250104-2</a></li>
+          <li><a class="dropdown-item" href="#">- 260105-3</a></li>
+          <li><a class="dropdown-item" href="#">- 270106-4</a></li>
+          <li><a class="dropdown-item" href="#">- 280107-5</a></li>
+          <li><a class="dropdown-item" href="#">- 290108-6</a></li>
+          <li><hr class="dropdown-divider"></li>
+          </ul>
+      </div>
+    </div>
+    <div class="col">
+      <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          🚩Tipo Cable
+          </button>
+          <ul class="dropdown-menu dropdown-menu-dark">
+          <li><a class="dropdown-item active" href="#">- SOLDAFLEX 2 AWG </a></li>
+          <li><a class="dropdown-item" href="#">- SOLDAFLEX 4 AWG</a></li>
+          <li><a class="dropdown-item" href="#">- SOLDAFLEX 6 AWG</a></li>
+          <li><a class="dropdown-item" href="#">- SOLDAFLEX 8 AWG</a></li>
+          <li><a class="dropdown-item" href="#">- SOLDAFLEX 10 AWG</a></li>
+          <li><a class="dropdown-item" href="#">- SOLDAFLEX 12 AWG</a></li>
+          <li><hr class="dropdown-divider"></li>
+          </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+<div class="row justify-content-evenly">
+  <div class="col-2">
+    <button class="btn btn-success" type="button">Sacar Cable</button>
+  </div>
+</div>
 </body>
 </html>
