--- a/Cables/templates/Cables/Home.html
+++ b/Cables/templates/Cables/Home.html
@@ -8,21 +8,9 @@
   <title>Inicio de Sesion</title>
   <style>
     body {
-<<<<<<< HEAD
   
-=======
-    /*
-      font-family: Arial, sans-serif;dddd
-      background-color: #f4f4f4;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      */
->>>>>>> 99594311e315f77f84bc61536c13825bc7b2676a
     font-family: Arial, sans-serif;
-    background-image: url("static/cable/img/Inicio.png");
+    background-image: url("/static/cable/img/Inicio.png");
     background-size: cover ;
     background-position: center center;
     margin: 0;
@@ -67,13 +55,8 @@
       event.preventDefault();
 
       // Redirigir a otra vista (otro archivo HTML)
-<<<<<<< HEAD
       window.location.href = 'superA/';
       
-=======
-      window.location.href = 'operario/';
-      //hola
->>>>>>> 99594311e315f77f84bc61536c13825bc7b2676a
     }); 
   </script>
   
