--- a/Cables/templates/Cables/Operario.html
+++ b/Cables/templates/Cables/Operario.html
@@ -7,7 +7,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
     <title>Operario</title>
-    
+    <style>
+      /* Estilos personalizados */
+      
+      .custom-bg-image {
+        background-image: url("static/cable/img/Inicio.png"); /* Imagen de fondo personalizada */
+        background-size: cover;
+        background-position: center;
+      }
+    </style>
+     
 
 </head>
 <body>
