--- a/Cables/templates/Cables/prueba.html
+++ b/Cables/templates/Cables/prueba.html
@@ -7,17 +7,17 @@
       <div class="card">
         <div class="card-body">
           <form action="" method="POST">
-            <div class="form-group">
+            <div class="form-group mb-3">
               <input type="text" id="txtCodigo" name="txtCodigo" class="form-control" placeholder="Codigo" minlength="8" maxlength="8" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
               <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="50" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3" >
               <input type="text" id="txtCliente" name="txtCliente" class="form-control" placeholder="Cliente" maxlength="8" required>
             </div>
             <div class="form-group">
-              <button type="submit" class="btn btn-succes btn-block txt-white">GUARDAR</button>
+              <button type="submit" class="btn btn-success btn-block text-white">GUARDAR</button>
             </div>
           </form>
         </div>
