--- a/Cables/templates/Cables/prueba.html
+++ b/Cables/templates/Cables/prueba.html
@@ -6,7 +6,7 @@
       <h2>Gestión de proyectos</h2>
       <div class="card">
         <div class="card-body">
-          <form action="" method="POST">
+          <form action="/crearproyectos/" method="POST">{% csrf_token%}
             <div class="form-group mb-3">
               <input type="text" id="txtCodigo" name="txtCodigo" class="form-control" placeholder="Codigo" minlength="8" maxlength="8" required>
             </div>
@@ -14,10 +14,10 @@
               <input type="text" id="txtNombre" name="txtNombre" class="form-control" placeholder="Nombre" maxlength="50" required>
             </div>
             <div class="form-group mb-3" >
-              <input type="text" id="txtCliente" name="txtCliente" class="form-control" placeholder="Cliente" maxlength="8" required>
+              <input type="text" id="txtCliente" name="txtCliente" class="form-control" placeholder="Cliente" maxlength="60" required>
             </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-success btn-block text-white">GUARDAR</button>
+            <div class="form-group d-grid w-100" >
+              <button type="submit" class="btn btn-success">GUARDAR</button>
             </div>
           </form>
         </div>
@@ -32,6 +32,7 @@
                 <th>Codigo</th>
                 <th>Nombre</th>
                 <th>Cliente</th>
+                <th coldspan="2">Opciones</th>
               </tr>
             </thead>
             <tbody>
@@ -40,6 +41,8 @@
                 <td>{{c.codigo}}</td>
                 <td>{{c.nombre}}</td>
                 <td>{{c.cliente}}</td>
+                <td><a href="/editarProyecto/{{c.codigo}}" class="btn btn-info">EDITAR</a></td>
+                <td><a href="eliminarProyecto/{{c.codigo}}" class="btn btn-danger">ELIMINAR</a></td>
               </tr>
               {% endfor%}
             </tbody>
