--- a/Cables/templates/Cables/Home.html
+++ b/Cables/templates/Cables/Home.html
@@ -48,6 +48,7 @@
     <div>
       <ul>
         <h1><a href="{% url 'prueba' %}">prueba</a></hi>
+        <h1><a href="{% url 'login' %}">login</a></hi>
       
       </ul>
     </div>
